--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <script src="https://unpkg.com/bootstrap-table@1.21.1/dist/bootstrap-table.min.js"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" >
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
     <div class="container">
@@ -24,7 +25,7 @@
                       <th data-field="bDay">B-Day</th>
                       <th data-field="sex">Sex</th>
                       <th data-field="department">Department</th>
-                      <th data-field="edit">Edit</th>
+                      <th data-field="edit" data-formatter="editFormatter">Edit</th>
                     </tr>
                   </thead>
             </table>
@@ -42,6 +43,13 @@
 
     function imageFormatter(value, row) {
       return '<img src="'+value+'" style="max-width: 200px;" />';
+    }
+
+    function editFormatter(value, row) {
+      let url = "manage?id=" + row.id
+      return `<button class="btn btn-outline-primary" onclick="window.location.href = '${url.toString()}'">
+                  <i class="bi bi-pencil-square"></i>
+              </button>`;
     }
 </script>
 </html>
