--- a/templates/manage.html
+++ b/templates/manage.html
@@ -93,7 +93,7 @@
             }
             if(e === "Delete"){
                 $(button).addClass("btn btn-danger")
-                $(button).on("click", function(){saveEmployee()})
+                $(button).on("click", function(){deleteEmployee()})
             }
             if(e === "Register"){
                 $(button).addClass("btn btn-primary")
@@ -151,7 +151,7 @@
                 contentType: false,
                 success: function (response) {
                     if(response.code === "success"){
-                        if (confirm("Register Success! \n Back to home? "))
+                        if (confirm("Register Success! \n Back to home ? "))
                             window.location.href = response.data
                     }
                     else{
@@ -160,5 +160,22 @@
                 }
             });
     }
+
+
+    function deleteEmployee(){
+            $.ajax({
+                type: "DELETE",
+                url: window.location.href,
+                success: function (response) {
+                    if(response.code === "success"){
+                        if (confirm("Delete Success! \n Back to home ? "))
+                            window.location.href = response.data
+                    }
+                    else{
+                        alert(response.message)
+                    }
+                }
+            });
+        }
 </script>
 </html>
